<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.module02task01_3.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_quantity"
            android:inputType="number"/>

        <EditText
            android:id="@+id/production_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/production_date"
            android:inputType="date"/>

        <EditText
            android:id="@+id/shelfLife"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shelflife"
            android:inputType="number"/>

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"/>

        <EditText
            android:id="@+id/manufacturer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manufacturer_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/manufacturer_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manufacturer_contacts"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/provider_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provider_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/provider_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provider_contacts"
            android:inputType="phone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_storage"/>

        <Button
            android:id="@+id/show_next_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>
